--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,7 @@ div#video iframe {
 }
 
 #people {
-  
+  position: absolute;
   bottom: 65px;
   left: 400px;
   width: 1400px;
@@ -433,7 +433,6 @@ div#sea {
   }
 
   #people {
-    
     left:500px;
     bottom:300px;
     min-width:200px;
