--- a/css/style.css
+++ b/css/style.css
@@ -433,6 +433,8 @@ div#sea {
   }
 
   #people {
+    margin-top: 300px;
+    margin-left: 200px;
     left:100px;
     bottom:-200px;
     min-width:400px;
