--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,8 @@ div#video iframe {
 }
 
 #people {
-  top:100px;  
+  margin-top: 200px;
+  margin-left: 300px;  
   bottom:105px;
   left:200px;
   width:500px;
