--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ div#beach,
 canvas#canvas {
   position: absolute;
   top: 0;
-  left: 100px;
+  left: 0;
   width: 100%;
   height: 100%;
 }
@@ -40,10 +40,8 @@ div#video iframe {
 }
 
 #people {
-  margin-top: 200px;
-  margin-left: 300px;  
-  bottom:105px;
-  left:200px;
+  margin-top: 100px;
+  margin-left: 200px;  
   width:500px;
 }
 
@@ -434,10 +432,8 @@ div#sea {
   }
 
   #people {
-    margin-top: 300px;
-    margin-left: 200px;
-    left:100px;
-    bottom:-200px;
+    margin-top: 00px;
+    margin-left: 00px;
     min-width:400px;
     min-height:500px;
   }
