--- a/css/style.css
+++ b/css/style.css
@@ -40,9 +40,11 @@ div#video iframe {
 }
 
 #people {
-  margin-top:100px;
-  margin-left:200px;  
-  width:500px;
+  margin-left: 400px;
+  margin-top: 20px;
+  bottom: 65px;
+  left: 400px;
+  width: 1400px;
 }
 
 #car {
@@ -432,10 +434,11 @@ div#sea {
   }
 
   #people {
-    margin-top: 00px;
-    margin-left: 00px;
-    min-width:100px;
-    min-height:100px;
+    position:center;
+    left:auto;
+    bottom:auto;
+    width:500px;
+    miheight:700px;
   }
 
   div#beach {
