--- a/css/style.css
+++ b/css/style.css
@@ -21,10 +21,10 @@ canvas#canvas {
 }
 
 div#beach {
-  background-image: url(https://dl.dropbox.com/s/oe0oce2udq44bj5/beachsil2.png);
+  background-image: url();
   /* background-size: cover; */
   background-position: bottom right;
-  background-size: 1700px;
+  background-size: 10px;
   background-repeat: no-repeat;
 }
 
@@ -40,9 +40,10 @@ div#video iframe {
 }
 
 #people {
-  position: absolute;
+  margin-left: 400px;
+  margin-top: 20px;
   bottom: 65px;
-  left: 40px;
+  left: 400px;
   width: 140px;
 }
 
@@ -433,9 +434,11 @@ div#sea {
   }
 
   #people {
-    left: 80px;
-    bottom: 70px;
-    width: 160px;
+    position:center;
+    left:auto;
+    bottom:auto;
+    width:300px;
+    height:400px;
   }
 
   div#beach {
