--- a/css/style.css
+++ b/css/style.css
@@ -434,11 +434,9 @@ div#sea {
   }
 
   #people {
-    position:center;
-    left:auto;
-    bottom:auto;
-    width:300px;
-    height:400px;
+    margin-top: 100px;
+    width:800px;
+    height:1400px;
   }
 
   div#beach {
