--- a/css/style.css
+++ b/css/style.css
@@ -40,11 +40,12 @@ div#video iframe {
 }
 
 #people {
-  margin-left: 500px;
-  margin-top: 50px;
+  margin-left: 400px;
+  margin-top: 250px;
   bottom: 65px;
   left: 400px;
-  width: 200px;
+  width: 500px;
+  height:500px;  
 }
 
 #car {
